--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <section class="">
     <nav class="navbar navbar-expand-lg mt-3">
         <div class="container">
-            <img src="logo-removebg-preview.png" height="30px" width="30px" alt="">
+            <img src="./images/logo-removebg-preview.png" height="30px" width="30px" alt="">
           <a class="navbar-brand px-3 fw-bolder" href="">MR Studio</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
                 </h1>
                 <div class="row mt-5">
                     <div class="col-1">
-                        <img src="profile.png" height="55" alt="">
+                        <img src="./images/profile.png" height="55" alt="">
                     </div>
                     <div class="col-8 mx-4 text-secondary mb-5">
                         <p>We blend insights and strategy to create digital products for forward-thinking organisations.</p>
@@ -69,13 +69,13 @@
                             Learn More</a>
                         </div>
                             <div class="col-md-6 col-sm-6 text-center mt-3">
-                                <a href="https://www.youtube.com/"><img src="play.PNG" height="60" alt=""></a>
+                                <a href="https://www.youtube.com/"><img src="./images/play.PNG" height="60" alt=""></a>
                         <span class="text-secondary ms-3">How it works</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 bg">
-                <img src="hero.PNG" class="img-fluid" alt="">
+                <img src="./images/hero.PNG" class="img-fluid" alt="">
             </div>
         </div>
     </div>
