added puzzle class

--- a/index.html
+++ b/index.html
@@ -129,3 +129,29 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!--
+<div class="r1 puzzleRL"></div>
+<div class="r2 puzzleRL"></div>
+<div class="r3 puzzleRL"></div>
+<div class="r4 puzzleRL"></div>
+<div class="r5 puzzleRL"></div>
+
+<div class="l1 puzzleRL"></div>
+<div class="l2 puzzleRL"></div>
+<div class="l3 puzzleRL"></div>
+<div class="l4 puzzleRL"></div>
+<div class="l5 puzzleRL"></div>
+
+<div class="t1 puzzleTB"></div>
+<div class="t2 puzzleTB"></div>
+<div class="t3 puzzleTB"></div>
+<div class="t4 puzzleTB"></div>
+<div class="t5 puzzleTB"></div>
+
+<div class="b1 puzzleTB"></div>
+<div class="b2 puzzleTB"></div>
+<div class="b3 puzzleTB"></div>
+<div class="b4 puzzleTB"></div>
+<div class="b5 puzzleTB"></div> 
+-->
