--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="font-family: Inter;">
 
 <!-- Navbar Section -->
-<section class="">
+<section>
     <nav class="navbar navbar-expand-lg mt-3">
         <div class="container">
             <img src="./images/logo-removebg-preview.png" height="30px" width="30px" alt="">
@@ -64,11 +64,11 @@
                     </div>
                 </div>
                     <div class="row align-items-center">
-                    <div class="col-md-3 col-sm-6 text-center">
+                    <div class="col-md-3 col-sm-6 text-center center">
                         <a href="button" class="btn btn-danger text-light p-3 rounded-4">
                             Learn More</a>
                         </div>
-                            <div class="col-md-6 col-sm-6 text-center mt-3">
+                            <div class="col-md-6 col-sm-6 text-center mt-3 center">
                                 <a href="https://www.youtube.com/"><img src="./images/play.PNG" height="60" alt=""></a>
                         <span class="text-secondary ms-3">How it works</span>
                     </div>
@@ -85,8 +85,30 @@
 <section class="mt-5">
     <div class="container">
         <div class="row align-items-center justify-content-center text-white text-center mx-5">
+            <!-- Card1 -->
                 <div class="col-lg-3 col-md-6">
-                    <div class="card-body bg-primary text-bolder p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                    <div class="card bg-primary text-bolder p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                        <div class="puzzle1R">
+                            <div class="r1 puzzleRL"></div>
+                            <div class="r2 puzzleRL"></div>
+                            <div class="r3 puzzleRL"></div>
+                            <div class="r4 puzzleRL"></div>
+                            <div class="r5 puzzleRL"></div>
+                            </div>
+                        <div class="puzzle1L">
+                            <div class="l1 puzzleRL"></div>
+                            <div class="l2 puzzleRL"></div>
+                            <div class="l3 puzzleRL"></div>
+                            <div class="l4 puzzleRL"></div>
+                            <div class="l5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle1B">
+                            <div class="b1 puzzleTB"></div>
+                            <div class="b2 puzzleTB"></div>
+                            <div class="b3 puzzleTB"></div>
+                            <div class="b4 puzzleTB"></div>
+                            <div class="b5 puzzleTB"></div> 
+                        </div>
                         <h1>99%</h1>
                         <p>Client retetion</p>
                         <p class="opacity-75">
@@ -94,8 +116,37 @@
                         </p>
                     </div>
                 </div>
+                <!-- Card2 -->
                 <div class="col-lg-3 col-md-6">
-                    <div class="card-body bg-danger p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                    <div class="card bg-danger p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                        <div class="puzzle2R">
+                            <div class="r1 puzzleRL"></div>
+                            <div class="r2 puzzleRL"></div>
+                            <div class="r3 puzzleRL"></div>
+                            <div class="r4 puzzleRL"></div>
+                            <div class="r5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle2L">
+                            <div class="l1 puzzleRL"></div>
+                            <div class="l2 puzzleRL"></div>
+                            <div class="l3 puzzleRL"></div>
+                            <div class="l4 puzzleRL"></div>
+                            <div class="l5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle2T">
+                            <div class="t1 puzzleTB"></div>
+                            <div class="t2 puzzleTB"></div>
+                            <div class="t3 puzzleTB"></div>
+                            <div class="t4 puzzleTB"></div>
+                            <div class="t5 puzzleTB"></div>
+                        </div>
+                        <div class="puzzle2B">
+                            <div class="b1 puzzleTB"></div>
+                            <div class="b2 puzzleTB"></div>
+                            <div class="b3 puzzleTB"></div>
+                            <div class="b4 puzzleTB"></div>
+                            <div class="b5 puzzleTB"></div> 
+                        </div>
                         <h1>12+</h1>
                         <p>Year of services</p>
                         <p class="opacity-75">
@@ -103,8 +154,38 @@
                         </p>
                     </div>
                 </div>
+
+                <!-- Card3 -->
                 <div class="col-lg-3 col-md-6">
-                    <div class="card-body bg-warning p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                    <div class="card bg-warning p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                        <div class="puzzle3R">
+                            <div class="r1 puzzleRL"></div>
+                            <div class="r2 puzzleRL"></div>
+                            <div class="r3 puzzleRL"></div>
+                            <div class="r4 puzzleRL"></div>
+                            <div class="r5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle3L">
+                            <div class="l1 puzzleRL"></div>
+                            <div class="l2 puzzleRL"></div>
+                            <div class="l3 puzzleRL"></div>
+                            <div class="l4 puzzleRL"></div>
+                            <div class="l5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle3T">
+                            <div class="t1 puzzleTB"></div>
+                            <div class="t2 puzzleTB"></div>
+                            <div class="t3 puzzleTB"></div>
+                            <div class="t4 puzzleTB"></div>
+                            <div class="t5 puzzleTB"></div>
+                        </div>
+                        <div class="puzzle3B">
+                            <div class="b1 puzzleTB"></div>
+                            <div class="b2 puzzleTB"></div>
+                            <div class="b3 puzzleTB"></div>
+                            <div class="b4 puzzleTB"></div>
+                            <div class="b5 puzzleTB"></div> 
+                        </div>
                         <h1>80+</h1>
                         <p>Professionals</p>
                         <p class="opacity-75">
@@ -112,8 +193,31 @@
                         </p>
                     </div>
                 </div>
+
+                <!-- Card4 -->
                 <div class="col-lg-3 col-md-6">
-                    <div class="card-body bg-dark p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                    <div class="card bg-dark p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                        <div class="puzzle4R">
+                            <div class="r1 puzzleRL"></div>
+                            <div class="r2 puzzleRL"></div>
+                            <div class="r3 puzzleRL"></div>
+                            <div class="r4 puzzleRL"></div>
+                            <div class="r5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle4L">
+                            <div class="l1 puzzleRL"></div>
+                            <div class="l2 puzzleRL"></div>
+                            <div class="l3 puzzleRL"></div>
+                            <div class="l4 puzzleRL"></div>
+                            <div class="l5 puzzleRL"></div>
+                        </div>
+                        <div class="puzzle4T">
+                            <div class="t1 puzzleTB"></div>
+                            <div class="t2 puzzleTB"></div>
+                            <div class="t3 puzzleTB"></div>
+                            <div class="t4 puzzleTB"></div>
+                            <div class="t5 puzzleTB"></div>
+                        </div>
                         <h1>50M</h1>
                         <p>Projects done</p>
                         <p class="opacity-75">
