--- a/index.html
+++ b/index.html
@@ -52,26 +52,25 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 col-12 justify-content-center">
-                <h1>
+                <h1 class="text">
                     Everyone are Deserve to be Happy.
                 </h1>
                 <div class="row mt-5">
-                    <div class="col-1">
-                        <img src="./images/profile.png" height="55" alt="">
+                        <img src="./images/profile.png" height="55" class="profile">
+                        <div class="col-md-8">
+                        <p class="text">We blend insights and strategy to create digital products for forward-thinking organisations.</p>
                     </div>
-                    <div class="col-8 mx-4 text-secondary mb-5">
-                        <p>We blend insights and strategy to create digital products for forward-thinking organisations.</p>
                     </div>
-                </div>
-                    <div class="row align-items-center">
-                    <div class="col-md-3 col-sm-6 text-center center">
+                    <div class="row align-items-center mt-5">
+                    <div class=" col-md-12 text-center center">
                         <a href="button" class="btn btn-danger text-light p-3 rounded-4">
-                            Learn More</a>
-                        </div>
-                            <div class="col-md-6 col-sm-6 text-center mt-3 center">
-                                <a href="https://www.youtube.com/"><img src="./images/play.PNG" height="60" alt=""></a>
+                            Learn More
+                        </a>
+                        <a href="button"  class="btn"> 
+                            <img src="/images/play-fill.svg" class="playButton" alt="">
+                        </a>
                         <span class="text-secondary ms-3">How it works</span>
-                    </div>
+                </div>
                 </div>
             </div>
             <div class="col-md-6 bg">
@@ -84,10 +83,10 @@
 <!-- Card Section -->
 <section class="mt-5">
     <div class="container">
-        <div class="row align-items-center justify-content-center text-white text-center mx-5">
+        <div class="row align-items-center justify-content-center text-white text-center mx-5 ">
             <!-- Card1 -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-primary text-bolder p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                <div class="col-xxl-3 col-md-6">
+                    <div class="card card1 bg-primary text-bolder p-4 pt-5 rounded-5 mt-md-4 mb-4">
                         <div class="puzzle1R">
                             <div class="r1 puzzleRL"></div>
                             <div class="r2 puzzleRL"></div>
@@ -117,8 +116,8 @@
                     </div>
                 </div>
                 <!-- Card2 -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-danger p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                <div class="col-xxl-3 col-md-6">
+                    <div class="card card2 bg-danger p-4 pt-5 rounded-5 mt-md-4 mb-4">
                         <div class="puzzle2R">
                             <div class="r1 puzzleRL"></div>
                             <div class="r2 puzzleRL"></div>
@@ -156,8 +155,8 @@
                 </div>
 
                 <!-- Card3 -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-warning p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                <div class="col-xxl-3 col-md-6">
+                    <div class="card card3 bg-warning p-4 pt-5 rounded-5 mt-md-4 mb-4">
                         <div class="puzzle3R">
                             <div class="r1 puzzleRL"></div>
                             <div class="r2 puzzleRL"></div>
@@ -195,8 +194,8 @@
                 </div>
 
                 <!-- Card4 -->
-                <div class="col-lg-3 col-md-6">
-                    <div class="card bg-dark p-4 pt-5 rounded-5 mt-md-4 mb-4">
+                <div class="col-xxl-3 col-md-6">
+                    <div class="card card3 bg-dark p-4 pt-5 rounded-5 mt-md-4 mb-4">
                         <div class="puzzle4R">
                             <div class="r1 puzzleRL"></div>
                             <div class="r2 puzzleRL"></div>
