--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       </nav>
 </section>
 
+
 <!-- Hero Section -->
 <section class="hero mt-5">
     <div class="container">
@@ -55,25 +56,25 @@
                 <h1 class="text">
                     Everyone are Deserve to be Happy.
                 </h1>
-                <div class="row mt-5">
+                    <div class="row mt-5">
                         <img src="./images/profile.png" height="55" class="profile">
-                        <div class="col-md-8">
-                        <p class="text">We blend insights and strategy to create digital products for forward-thinking organisations.</p>
+                            <div class="col-md-8">
+                                <p class="text">We blend insights and strategy to create digital products for forward-thinking organisations.</p>
+                         </div>
                     </div>
-                    </div>
-                    <div class="row align-items-center mt-5">
-                    <div class=" col-md-12 text-center center">
-                        <a href="button" class="btn btn-danger text-light p-3 rounded-4">
+                <div class="row align-items-center mt-5">
+                    <div class=" col-md-12 center">
+                        <a href="button" class="btn btn-danger text-light p-3 rounded-4 shadow">
                             Learn More
                         </a>
                         <a href="button"  class="btn"> 
-                            <img src="/images/play-fill.svg" class="playButton" alt="">
+                            <img src="/images/play-fill.svg" class="playButton shadow" alt="">
                         </a>
-                        <span class="text-secondary ms-3">How it works</span>
-                </div>
+                         <span class="text-secondary ms-3">How it works</span>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 bg">
+            <div class="col-md-6 bg mt-5">
                 <img src="./images/hero.PNG" class="img-fluid" alt="">
             </div>
         </div>
@@ -83,7 +84,7 @@
 <!-- Card Section -->
 <section class="mt-5">
     <div class="container">
-        <div class="row align-items-center justify-content-center text-white text-center mx-5 ">
+        <div class="row text-white text-center mx-5 ">
             <!-- Card1 -->
                 <div class="col-xxl-3 col-md-6">
                     <div class="card card1 bg-primary text-bolder p-4 pt-5 rounded-5 mt-md-4 mb-4">
