--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             Learn More
                         </a>
                         <a href="button"  class="btn"> 
-                            <img src="/images/play-fill.svg" class="playButton shadow" alt="">
+                            <img src="/images/play-fill.svg" class="">
                         </a>
                          <span class="text-secondary ms-3">How it works</span>
                     </div>
