--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
                         <a href="button" class="btn btn-danger text-light p-3 rounded-4 shadow">
                             Learn More
                         </a>
-                        <a href="button"  class="btn"> 
-                            <img src="./images/play-fill.svg" class="playButton">
+                        <a href="button"  class="btn bodyPlay"> 
+                            <div class="playBorder"></div>
+                            <img src="./images/play-fill.svg" class="mt-2">
                         </a>
                          <span class="text-secondary ms-3">How it works</span>
                     </div>
